# fun-with-gcm

./: .gitignore  CMakeLists.txt  FunWithCbc.java  README.md  fun_with_gcm.java  fun_with_gcm_siv.cc  gauss.h  gf2_128_polyval.cc  gf2_128_polyval.h
